Fixes Paul image, adds workshops to schedule, adds track labels on mobile

--- a/themes/vixcon-hugo/assets/scss/_common.scss
+++ b/themes/vixcon-hugo/assets/scss/_common.scss
@@ -1,17 +1,17 @@
 .section {
-  padding: 90px 0px;
+  padding: 45px 0px;
 }
 
 .section-sm {
-  padding: 90px 0px;
+  padding: 45px 0px;
 }
 
 .section-top {
-  padding-top: 90px;
+  padding-top: 45px;
 }
 
 .section-bottom {
-  padding-bottom: 90px;
+  padding-bottom: 45px;
 }
 
 .mb-30 {
